tests/baselines/reference/typeUsedAsValueError2.errors.txt
tests/cases/compiler/world.ts(4,1): error TS2693: 'HelloInterface' only refers to a type, but is being used as a value here.
tests/cases/compiler/world.ts(5,1): error TS2708: Cannot use namespace 'HelloNamespace' as a value.


==== tests/cases/compiler/world.ts (2 errors) ====
    import HelloInterface = require("helloInterface");
    import HelloNamespace = require("helloNamespace");
    
    HelloInterface.world;
    ~~~~~~~~~~~~~~
!!! error TS2693: 'HelloInterface' only refers to a type, but is being used as a value here.
    HelloNamespace.world;
    ~~~~~~~~~~~~~~
!!! error TS2708: Cannot use namespace 'HelloNamespace' as a value.
==== tests/cases/compiler/helloInterface.ts (0 errors) ====
    interface HelloInterface {
        world: any;
    }
    
    export = HelloInterface;
    
==== tests/cases/compiler/helloNamespace.ts (0 errors) ====
    namespace HelloNamespace {
        export type world = any;
    }
    
    export = HelloNamespace;
    